--- a/public/template/list.html
+++ b/public/template/list.html
@@ -1,6 +1,6 @@
 <div class="row">
-  <h3 style="margin-top: 15px">Información de Películas</h3>
-  <p>En esta sección se muestra la información de las películas</p>
+  <h3 style="margin-top: 15px">Información de Directores</h3>
+  <p>En esta sección se muestra la información de los directores de las películas</p>
   <ul class="list-group list-group-flush">
     {{#.}}
     <a class="list-group-item" href="/?id={{ id }}" data-navigo> {{ name }}</a>
