--- a/public/template/detail.html
+++ b/public/template/detail.html
@@ -21,7 +21,7 @@
       </div>
       <div class="row mb-3">
         <div class="col">
-          <h5>Detalle de Director</h5>
+          <h5>Detalle del Estudio</h5>
         </div>
       </div>
       <div class="row">
@@ -34,26 +34,6 @@
                 id="name"
                 type="text"
                 value="{{ name }}"
-                readonly
-              />
-            </div>
-            <div class="input-group mb-3">
-              <label class="input-group-text" for="birth_year">Fecha nacimiento</label>
-              <input
-                class="form-control"
-                id="birth_year"
-                type="text"
-                value="{{ birth_year }}"
-                readonly
-              />
-            </div>
-            <div class="input-group mb-3">
-              <label class="input-group-text" for="nationality">Nacionalidad</label>
-              <input
-                class="form-control"
-                id="nationality"
-                type="text"
-                value="{{ nationality }}"
                 readonly
               />
             </div>
