--- a/public/template/detail.html
+++ b/public/template/detail.html
@@ -21,7 +21,7 @@
       </div>
       <div class="row mb-3">
         <div class="col">
-          <h5>Detalle de Pelicula</h5>
+          <h5>Detalle de la Pelicula</h5>
         </div>
       </div>
       <div class="row">
